@@ -1,43 +1,35 @@
-sudo: false
+dist: xenial
+sudo: true
 language: python
 cache: pip
 
 python:
-    - "2.7"
-    - "3.4"
-    - "3.5"
-    - "3.6"
+ - "2.7"
+ - "3.4"
+ - "3.5"
+ - "3.6"
+ - "3.7"
 
 matrix:
-    fast_finish: true
-    allow_failures:
-      - env: TOXENV=warnings
+  fast_finish: true
+  include:
+    - python: "3.6"
+      env: TOXENV="lint,isort"
 
-    include:
-      - python: "3.7"
-        dist: xenial
-        sudo: true
-
-      - python: "3.6"
-        env: TOXENV="lint,isort"
-
-      - python: "3.6"
-        env: TOXENV=coverage
-        script: tox
-        after_success:
-            - pip install codecov && codecov
-
-      - python: "3.6"
-        env: TOXENV=warnings
-
+    - python: "3.6"
+      env: TOXENV="coverage"
+      after_success:
+       - pip install codecov
+       - codecov
 
 install:
-    - pip install -U pip six setuptools wheel
-    - pip install -U tox tox-travis tox-venv
-    - python setup.py bdist_wheel
-    - tox --notest  # install dependencies
+ - pip install -U pip six setuptools wheel
+ - pip install -U tox tox-travis
+ - python setup.py bdist_wheel
+ - tox --notest  # install dependencies
 
-script: tox --installpkg ./dist/djangorestframework_guardian-*.whl
+script: tox
+#script: tox --installpkg ./dist/djangorestframework_guardian-*.whl
 
 notifications:
     email: false
