@@ -17,7 +17,7 @@ known_third_party=django,rest_framework
 known_first_party=rest_framework_guardian,tests
 
 [coverage:run]
-branch = True
+branch = true
 source = src
 
 [coverage:report]
