@@ -1,18 +1,37 @@
 [tox]
 envlist =
-       {py27,py34,py35,py36}-django111,
-       {py34,py35,py36,py37}-django20,
-       {py35,py36,py37}-django21,
-       lint,isort,coverage,warnings
+    py{27,34,35,36}-django111,
+    py34-django20,
+    py{35,36,37}-django{20,21,22}
+    py{36,37}-djangomaster
 
 [testenv]
-commands = python manage.py test {posargs: --no-input -v 2}
+commands =
+    python -Wd manage.py test {posargs}
 setenv =
     PYTHONDONTWRITEBYTECODE = 1
 deps =
     django111: Django~=1.11
     django20: Django~=2.0
     django21: Django~=2.1
+    django22: Django~=2.2
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
+
+[testenv:py36-djangomaster]
+ignore_outcome=true
+
+[testenv:py37-djangomaster]
+ignore_outcome=true
+
+[testenv:coverage]
+usedevelop = true
+basepython = python3.6
+commands:
+    python --version
+    python -Wd {envbindir}/coverage run manage.py test {posargs}
+deps:
+    Django
+    coverage
 
 [testenv:lint]
 commands = flake8 src tests {posargs}
@@ -24,11 +43,3 @@ deps =
 [testenv:isort]
 commands = isort --check-only --recursive src tests {posargs: --diff}
 deps = isort
-
-[testenv:coverage]
-usedevelop = true
-commands = coverage run manage.py test {posargs: --no-input -v 2}
-deps = coverage
-
-[testenv:warnings]
-commands = python -Werror manage.py test {posargs: --no-input -v 2}
