@@ -1,6 +1,8 @@
 Unreleased
 ==========
 
+- Ensure Django 2.2 compatibility
+
 0.1.1 (2018-11-02)
 ==================
 
